# slpmd-main-mri

./: .gitignore  LICENSE  README.md  generate_dicom_info.sh  main.py  pyproject.toml
auxiliary_code/: generate_dicom_info.sh
scripts/: README.md  run_fmriprep.sh  run_heudiconv.sh  run_heudiconv_single.sh  run_mriqc.sh
src/data_to_bids/: README.md  extract_subject_labels.sh  generate_dicom_info.sh  post_process_cli.py  post_process_core.py  run_heudiconv.py
src/data_to_bids/templates/: heuristic.py
src/preprocessing/: run_fmriprep.py
src/quality_control/: run_mriqc.py
